--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,17 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+// @import './example';
+@import './faq';
+@import './footer';
+@import './header';
+@import './hero';
+@import './industry';
+@import './kickstart';
+@import './partners';
+@import './regional-partnerships';
+@import './request';
+@import './resources';
+@import './value';
+@import './weareyouknow';
+@import './work';
