--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
-<header>
-  <a href="./index.html">Apello</a>
-  <nav>
+<header class="header-container">
+  <a href="./index.html" class="logo">Apello</a>
+  <nav class="nav">
     <ul class="list">
       <li><a href="" class="header-link">Home</a></li>
       <li><a href="" class="header-link">Portfolio</a></li>
