--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -1,15 +1,27 @@
-<section class="partners">
-    <h2 class="title">Your reliable web and app development partner</h2>
-    <p>
-      We make successful products that turn great ideas into user-friendly
-      solutions for consumers and businesses.
-    </p>
-    <ul class="list">
-      <li><p>Completely tailored software.</p></li>
-      <li><p>Daily support with project manager.</p></li>
-      <li><p>Projects delivered on time, always.</p></li>
-      <li><p>Testing and quality assurance.</p></li>
-      <li><p>Professional marketing expertise.</p></li>
-      <li><p>Transparent costs and support.</p></li>
-    </ul>
-  </section>
+<section>
+  <div class="container">
+    <div class="partners">
+      <div class="partners-left">
+        <h2 class="partners-left__title">Your reliable web and app development partner</h2>
+        <p class="partners-left__text">
+          We make successful products that turn great ideas into user-friendly solutions for
+          consumers and businesses.
+        </p>
+      </div>
+      <ul class="features list">
+        <li class="features__item"><p class="features__text">Completely tailored software.</p></li>
+        <li class="features__item">
+          <p class="features__text">Daily support with project manager.</p>
+        </li>
+        <li class="features__item">
+          <p class="features__text">Projects delivered on time, always.</p>
+        </li>
+        <li class="features__item"><p class="features__text">Testing and quality assurance.</p></li>
+        <li class="features__item">
+          <p class="features__text">Professional marketing expertise.</p>
+        </li>
+        <li class="features__item"><p class="features__text">Transparent costs and support.</p></li>
+      </ul>
+    </div>
+  </div>
+</section>
