--- a/src/partials/kickstart.html
+++ b/src/partials/kickstart.html
@@ -1,17 +1,25 @@
-<section>
-        <h2>kickstart your tech career</h2>
-        <p>
+<section  class="start-section">
+  <div class="start-container">
+        <h2 class="start-title">kickstart your tech career</h2>
+        <p class="start-text">
           We're always on the lookout for bright strategic minds, creative
           superstars and coding gurus. Select one of our current opportunities
           below to apply.
         </p>
-        <ul>
-          <li>Backend Engineer</li>
-          <li>Product Designer</li>
-          <li>Frontend Engineer</li>
-          <li>Project Manager</li>
-          <li>Finance Director</li>
-          <li>Backend Engineer</li>
-          <li>Product Designer</li>
+  </div>
+  <div class="list-container">
+        <ul class="start-btn">
+          <li><a href="" class="start-href">Backend Engineer</a></li>
+          <li><a href="" class="start-href">Product Designer</a></li>
+          <li><a href="" class="start-href">Frontend Engineer</a> </li>
+          <li><a href="" class="start-href">Project Manager</a> </li>
+          <li><a href="" class="start-href">Finance Director</a> </li>
+          <li><a href="" class="start-href">Backend Engineer</a> </li>
+          <li><a href="" class="start-href">Product Designer</a> </li>
         </ul>
+  </div>
+        <div>
+          <button type="button"><</button>
+          <button type="button">></button>
+        </div>
       </section>
