--- a/src/partials/request.html
+++ b/src/partials/request.html
@@ -1,12 +1,22 @@
-<section>
-    <h2>Request a callback from our expert team</h2>
+<section class="request-section">
+  <div class="request-window">
+    <h2 class="form-title">Request a callback from our <br> expert team</h2>
     <form>
-      <input type="text" /><textarea
+      <input 
+        type="text"  
+        class="form-input"
+        placeholder="Required sevice*"
+      />
+      <textarea
         name=""
         id=""
         cols="30"
         rows="10"
+        class="form-area"
+        placeholder="Details*"
       ></textarea
-      ><button type="submit">Send request</button>
+      ><button type="submit" class="form-submit">Send request</button>
     </form>
+  </div>
+    
   </section>
