--- a/src/partials/industry.html
+++ b/src/partials/industry.html
@@ -1,13 +1,25 @@
-<section>
-  <h2>We're industry approved</h2>
-  <p>
+<section class="industry">
+  <h2 industry__title>We're industry approved</h2>
+  <p industry__text>
     Appello is one of Australia’s most highly rated software companies by recognisable directories
     like Clutch, GoodFirms, AppFutura and many more.
   </p>
-  <ul>
-    <li><img src="" alt="" />a</li>
-    <li><img src="" alt="" />a</li>
-    <li><img src="" alt="" />a</li>
-    <li><img src="" alt="" />a</li>
+  <ul class="industry-list">
+    <li class="industry-list__item>
+      <svg class="industry-icon" width="94" height="94">
+        <use xlink:href="#icon-IMAGE-industry-1"></use></svg>
+      </li>
+    <li class="industry-list__item>
+      <svg class="industry-icon" width="94" height="94">
+        <use xlink:href="#icon-IMAGE-industry-2"></use></svg>
+    </li>
+    <li class="industry-list__item>
+      <svg class="industry-icon" width="94" height="94">
+        <use xlink:href="#icon-IMAGE-industry-3"></use></svg>
+    </li>
+    <li class="industry-list__item>
+      <svg class="industry-icon-last" width="117" height="83">
+        <use xlink:href="#icon-IMAGE-industry-4"></use></svg>
+    </li>
   </ul>
 </section>
