--- a/src/partials/value.html
+++ b/src/partials/value.html
@@ -1,18 +1,59 @@
 <section>
-    <h2>We value our relationships</h2>
-    <p>
-      Over the past decade, Appello has established itself as a leader in
-      the IT industry. Along the way, we have formed a number of valued
-      relationships with both clients and business partners.
+  <div class="value__toptext">
+    <h2 class="value__title">We value our relationships</h2>
+    <p value__text>
+      Over the past decade, Appello has established itself as a leader in the IT industry. Along the
+      way, we have formed a number of valued relationships with both clients and business partners.
     </p>
-    <ul>
-      <li>a</li>
-      <li>a</li>
-      <li>a</li>
-      <li>a</li>
-      <li>a</li>
-      <li>a</li>
-      <li>a</li>
-      <li>a</li>
-    </ul>
-  </section>
+  </div>
+  <ul class="value__list list">
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-eyetelligence"></use></svg
+      ></a>
+    </li>
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-oxy33"></use></svg
+      ></a>
+    </li>
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-f45"></use></svg
+      ></a>
+    </li>
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-walker"></use></svg
+      ></a>
+    </li>
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-foxo"></use></svg
+      ></a>
+    </li>
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-hst"></use></svg
+      ></a>
+    </li>
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-kitchko"></use></svg
+      ></a>
+    </li>
+    <li class="value__item">
+      <a href="" class="value__link"
+        ><svg width="134" height="26" class="value__icon">
+          <use href="images/symbol-defs.svg#icon-vidya"></use></svg
+      ></a>
+    </li>
+  </ul>
+</section>
