--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,15 +1,43 @@
 <section class="faq">
-    <h2>FAQ</h2>
-    <p>
+    <h2 class="faq__title">FAQ</h2>
+    <div class="faq__container">
+        <p class="faq__text">
         Below is a list of frequently asked questions. If you can't find what
         you’re looking for then feel free to ask us directly via
-    </p>
-    <ol>
-        <li>What is your privacy and security policy?</li>
-        <li>How long is the development timeline?</li>
-        <li>What type of companies do you work with?</li>
-        <li>How many team members for a project?</li>
-        <li>What warranties are to ensure deliverables are met?</li>
-        <li>Do you outsource work?</li>
+        </p>
+        <a href="" class="faq__link">email</a>
+        <span>.</span>
+    </div>
+    <ol class="faq__list">
+        <li class="faq__item">What is your privacy and security policy?
+            <svg class="faq__icon" width="30" height="30">
+                 <use href=""></use>
+            </svg>
+        </li>
+        <li class="faq__item">How long is the development timeline?
+            <svg class="faq__icon" width="30" height="30">
+                <use href=""></use>
+            </svg>
+        </li>
+        <li class="faq__item">What type of companies do you work with?
+            <svg class="faq__icon" width="30" height="30">
+                <use href=""></use>
+            </svg>
+        </li>
+        <li class="faq__item">How many team members for a project?
+            <svg class="faq__icon" width="30" height="30">
+                <use href=""></use>
+            </svg>
+        </li>
+        <li class="faq__item">What warranties are to ensure deliverables are met?
+            <svg class="faq__icon" width="30" height="30">
+                <use href=""></use>
+            </svg>
+        </li>
+        <li class="faq__item">Do you outsource work?
+            <svg class="faq__icon" width="30" height="30">
+                <use href=""></use>
+            </svg>
+        </li>
     </ol>
 </section>
