--- a/src/partials/weareyouknow.html
+++ b/src/partials/weareyouknow.html
@@ -1,32 +1,32 @@
-<section>
-        <h2>Where are you now?</h2>
-        <p>
+<section class="stage">
+        <h2 class="stage__title-section">Where are you now?</h2>
+        <p class="stage__text stage__text--small">
           Use the tabs below to identify what stage you’re at so we can help you
           to move on to the next phase of your project.
         </p>
-        <ul>
+        <ul class="list">
           <li><button>Design</button></li>
           <li><button>Develop</button></li>
           <li><button>Launch</button></li>
         </ul>
-        <ol>
+        <ol class="stage__ol-list">
           <li>
-            <h3>Research</h3>
-            <p>
+            <h3 class="stage__title">Research</h3>
+            <p class="stage__text stage__text--big">
               We can help you to better understand your target audience,
               enabling you to create a more powerful value proposition for your
               business.
             </p>
           </li>
           <li>
-            <h3>Requirements</h3>
+            <h3 class="stage__title">Requirements</h3>
             <p>
               Based on research insights, we can help you to determine how your
               product and service should function.
             </p>
           </li>
           <li>
-            <h3>UI Design</h3>
+            <h3 class="stage__title">UI Design</h3>
             <p>
               We’re able to create unique and aesthetically pleasing visual
               design solutions that fulfil both your user needs and business
@@ -34,7 +34,7 @@
             </p>
           </li>
           <li>
-            <h3>Prototyping</h3>
+            <h3 class="stage__title">Prototyping</h3>
             <p>
               We can provide you with a clickable prototype so you can test and
               play with your product; allowing you to get a better feel for the
@@ -42,7 +42,7 @@
             </p>
           </li>
           <li>
-            <h3>Prototyping</h3>
+            <h3 class="stage__title">Prototyping</h3>
             <p>
               We can provide you with a clickable prototype so you can test and
               play with your product; allowing you to get a better feel for the
