--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,8 @@
 
 // Стили для файла с примером HTML-фрагмента
 // @import './example';
+@import './base/common';
+@import './base/container';
 @import './faq';
 @import './footer';
 @import './header';
