--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,14 +6,24 @@
 
 .header-container {
   display: flex;
-  align-items: center;
+  text-align: center;
   border-radius: 0px;
   padding: 200px 0;
+  background-color: darkcyan;
+}
+
+.nav {
+  display: flex;
 }
 
 .logo {
   background: #ffffff;
   margin-right: 140px;
+}
+
+.list {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .header-link {
@@ -24,7 +34,6 @@
 }
 
 .header-btn {
-  box-sizing: border-box;
   position: absolute;
   border: 1px solid #ffffff;
   border-radius: 4px;
