--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,10 +1,10 @@
 <section class="faq">
-    <h2>FAQ</h2>
-    <p>
+    <h2 class="faq__title">FAQ</h2>
+    <p class="faq__text">
         Below is a list of frequently asked questions. If you can't find what
         you’re looking for then feel free to ask us directly via
     </p>
-    <ol>
+    <ol class="faq__list">
         <li>What is your privacy and security policy?</li>
         <li>How long is the development timeline?</li>
         <li>What type of companies do you work with?</li>
