--- a/src/sass/_request.scss
+++ b/src/sass/_request.scss
@@ -25,8 +25,7 @@
 
 .form-input, .form-area{
     display: block;
-    width: 100%;
-    padding-left: 20px;
+    width: 100%;    
     padding: 10px 20px;
 
     background: #FFFFFF;
@@ -43,6 +42,11 @@
         
 }
 
+.form-input::placeholder, 
+.form-area::placeholder{
+    color: #000000;
+}
+
 .form-input{
     height: 60px;
     margin-bottom: 30px;
@@ -53,18 +57,22 @@
     height: 120px;
     margin-bottom: 40px;
     padding: 10px 20px;
+    resize: none;
 
 }
 
 .form-submit{
     display: block;
     margin: 0 auto;
+
     width: 174px;
     height: 60px;
+
     background: #0A8BFE;
     border-radius: 4px;
-    font-family: 'Inter';
-    // font-style: normal;
+    border: none;
+
+    font-family: 'Inter';    
     font-weight: 700;
     font-size: 12px;
     line-height: 2;
