--- a/src/sass/_regional-partnerships.scss
+++ b/src/sass/_regional-partnerships.scss
@@ -8,3 +8,22 @@
     margin-bottom: 30px;
     max-width: 365px;
 }
+
+.partnership-title {
+    font-size: 42px;
+    line-height: 1.2;
+    text-align: center;
+    color: #000000;
+}
+.partnership-parag {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 2;
+    color: #737373;
+}
+
+.partnership-town {
+    font-size: 20px;
+    line-height: 1.4;
+    color: #000000;
+}
