--- a/src/partials/regional-partnerships.html
+++ b/src/partials/regional-partnerships.html
@@ -1,46 +1,48 @@
 <section>
-  <h2 class="">Regional partnerships</h2>
+  <div class="container"></div>
+  <h2 class="partnership-title">Regional partnerships</h2>
   <ul class="partnership-items">
     <li class="partnership-list list">
-      <p>App Development</p>
-      <h3>Sydney</h3>
+      <p class="partnership-parag">App Development</p>
+      <h3 class="partnership-town">Sydney</h3>
       <svg width="78"; height="97">
         <use href="images/sprite.svg#icon-sydney"></use>
       </svg>
-    <li>
-      <p>App Development</p>
-      <h3>Brisbane</h3>
+    <li class="partnership-list list">
+      <p class="partnership-parag">App Development</p>
+      <h3 class="partnership-town">Brisbane</h3>
     <svg width="81"; height="82">
         <use href="images/sprite.svg#icon-brisbane"></use>
       </svg>
     </li>
-    <li>
-      <p>App Development</p>
-      <h3>Goldcoast</h3>
+    <li class="partnership-list list">
+      <p class="partnership-parag">App Development</p>
+      <h3 class="partnership-town">Goldcoast</h3>
       <svg width="63"; height="97">
         <use href="images/sprite.svg#icon-goldcoast"></use>
       </svg>
     </li>
-    <li>
-      <p>App Development</p>
-      <h3>Adelaide</h3>
+    <li class="partnership-list list">
+      <p class="partnership-parag">App Development</p>
+      <h3 class="partnership-town">Adelaide</h3>
       <svg width="77"; height="79">
         <use href="images/sprite.svg#icon-adelaide"></use>
       </svg>
     </li>
-    <li>
-      <p>App Development</p>
-      <h3>Melbourne</h3>
+    <li class="partnership-list list">
+      <p class="partnership-parag">App Development</p>
+      <h3 class="partnership-town">Melbourne</h3>
       <svg width="83"; height="90">
         <use href="images/sprite.svg#icon-melbourne"></use>
       </svg>
     </li>
-    <li>
-      <p>App Development</p>
-      <h3>Canberra</h3>
+    <li class="partnership-list list">
+      <p class="partnership-parag">App Development</p>
+      <h3 class="partnership-town">Canberra</h3>
       <svg width="107"; height="79">
         <use href="images/sprite.svg#icon-canberra"></use>
       </svg>
     </li>
   </ul>
+  </div>
 </section>
