--- a/src/sass/_partners.scss
+++ b/src/sass/_partners.scss
@@ -1,19 +1,22 @@
 .partners {
   display: flex;
+  width: 1190px;
+  margin: 0 auto;
+  padding: 50px 25px;
   height: 350px;
-  width: 1140px;
+
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
 }
 
 .partners-left {
-  width: 404px;
   height: 250px;
   padding: 46px 53px 37px 15px;
   border-right: 1px solid #e8e8e8;
 
   &__title {
+    width: 297px;
     margin-bottom: 1px;
 
-    font-family: 'Roboto';
     font-size: 26px;
     line-height: 1.46;
 
@@ -21,7 +24,8 @@
   }
 
   &__text {
-    font-family: 'Roboto';
+    width: 335px;
+
     font-size: 16px;
     line-height: 1.88;
 
@@ -31,13 +35,6 @@
 
 .list {
   list-style: none;
-}
-
-h2,
-p,
-li {
-  margin: 0;
-  padding: 0;
 }
 
 .features {
