--- a/src/partials/value.html
+++ b/src/partials/value.html
@@ -1,6 +1,6 @@
 <section>
   <div class="value__toptext">
-    <h2 class="value__title">We value our relationships</h2>
+    <h2 class="value__title .value__title--bottom">We value our relationships</h2>
     <p value__text>
       Over the past decade, Appello has established itself as a leader in the IT industry. Along the
       way, we have formed a number of valued relationships with both clients and business partners.
