--- a/src/sass/_value.scss
+++ b/src/sass/_value.scss
@@ -13,6 +13,10 @@
   color: #000000;
 }
 
+.value__title--bottom {
+  margin-bottom: 36px;
+}
+
 .value__text {
   font-size: 11px;
   line-height: 2.73;
@@ -20,8 +24,8 @@
   color: #737373;
 }
 
-.list {
-  list-style: none;
+value__toptext {
+  margin-bottom: 75.22px;
 }
 
 .value__list {
