--- a/src/partials/industry.html
+++ b/src/partials/industry.html
@@ -6,20 +6,14 @@
   </p>
   <ul class="industry-list">
     <li class="industry-list__item>
-      <svg class="industry-icon" width="94" height="94">
-        <use xlink:href="#icon-IMAGE-industry-1"></use></svg>
+      <img src="images/industry1.png" alt="1" width="94"/>
       </li>
     <li class="industry-list__item>
-      <svg class="industry-icon" width="94" height="94">
-        <use xlink:href="#icon-IMAGE-industry-2"></use></svg>
+      <img src="images/industry2.png" alt="2" width="94"/>
     </li>
     <li class="industry-list__item>
-      <svg class="industry-icon" width="94" height="94">
-        <use xlink:href="#icon-IMAGE-industry-3"></use></svg>
+      <img src="images/industry3.png" alt="3" width="94"/>
     </li>
-    <li class="industry-list__item>
-      <svg class="industry-icon-last" width="117" height="83">
-        <use xlink:href="#icon-IMAGE-industry-4"></use></svg>
-    </li>
+    <li class="industry-list__item><img src="images/industry4.png" alt="4" width="117"/></li>
   </ul>
 </section>
