--- a/src/partials/work.html
+++ b/src/partials/work.html
@@ -1,58 +1,58 @@
 <section class="work">
+  <div class="container">
     <h2 class="work__title">We’re proud of our work</h2>
     <ul class="work__list">
-        <li class="work__item">
-            <h3 class="work__subtitle">50+</h3>
-            <p class="work__text">Successfully completed projects</p>
-        </li>
-        <li class="work__item">
-            <h3 class="work__subtitle">35+</h3>
-            <p class="work__text">Happy and appreciative customers</p>
-        </li>
-        <li class="work__item">
-            <h3 class="work__subtitle">10</h3>
-            <p class="work__text">Combined years of experience</p>
-        </li>
-        <li class="work__item">
-            <h3 class="work__subtitle">23</h3>
-            <p class="work__text">Experienced and talented workers</p>
-        </li>
+      <li class="work__item">
+        <h3 class="work__subtitle">50+</h3>
+        <p class="work__text">Successfully completed projects</p>
+      </li>
+      <li class="work__item">
+        <h3 class="work__subtitle">35+</h3>
+        <p class="work__text">Happy and appreciative customers</p>
+      </li>
+      <li class="work__item">
+        <h3 class="work__subtitle">10</h3>
+        <p class="work__text">Combined years of experience</p>
+      </li>
+      <li class="work__item">
+        <h3 class="work__subtitle">23</h3>
+        <p class="work__text">Experienced and talented workers</p>
+      </li>
     </ul>
     <ul>
-        <li>
-            <img src="" alt="" />
-            <h3 class="work__caption">Eyetelligence – AI-based Eye Health</h3>
-            <p class="work__descr">
-                Eyetelligence is a medtech company using AI based software to
-                recognise eye diseases. Appello software developed their website
-                which has just been released.
-            </p>
-        </li>
-        <li>
-            <img src="" alt="" />
-            <h3 class="work__caption">Give + Get – Charity Challenger App</h3>
-            <p class="work__descr">
-                Give + Get is a modern charity app. “Give”, while joining a
-                community of active people who complete challenges and reap the
-                rewards they offer; “Get”.
-            </p>
-        </li>
-        <li>
-            <img src="" alt="" />
-            <h3 class="work__caption">Voken – Shared Childcare App</h3>
-            <p class="work__descr">
-                Voken lets people arrange childcare with families they trust, earn
-                tokens and use for your own requests.
-            </p>
-        </li>
-        <li>
-            <img src="" alt="" />
-            <h3 class="work__caption">Chattii – Disability Dating App</h3>
-            <p class="work__descr">
-                Chattii is born from the need to provide a space for people living
-                with disabilities to connect, chat, and explore their love life.
-            </p>
-        </li>
+      <li>
+        <img src="npm run dev" alt="" />
+        <h3 class="work__caption">Eyetelligence – AI-based Eye Health</h3>
+        <p class="work__descr">
+          Eyetelligence is a medtech company using AI based software to recognise eye diseases.
+          Appello software developed their website which has just been released.
+        </p>
+      </li>
+      <li>
+        <img src="" alt="" />
+        <h3 class="work__caption">Give + Get – Charity Challenger App</h3>
+        <p class="work__descr">
+          Give + Get is a modern charity app. “Give”, while joining a community of active people who
+          complete challenges and reap the rewards they offer; “Get”.
+        </p>
+      </li>
+      <li>
+        <img src="" alt="" />
+        <h3 class="work__caption">Voken – Shared Childcare App</h3>
+        <p class="work__descr">
+          Voken lets people arrange childcare with families they trust, earn tokens and use for your
+          own requests.
+        </p>
+      </li>
+      <li>
+        <img src="" alt="" />
+        <h3 class="work__caption">Chattii – Disability Dating App</h3>
+        <p class="work__descr">
+          Chattii is born from the need to provide a space for people living with disabilities to
+          connect, chat, and explore their love life.
+        </p>
+      </li>
     </ul>
     <button type="button">See more</button>
+  </div>
 </section>
