--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,15 +1,44 @@
 <section class="faq">
-    <h2 class="faq__title">FAQ</h2>
-    <p class="faq__text">
+    <div class="container">
+        <div class="faq__container ">
+            <h2 class="faq__title">FAQ</h2>
+            <p class="faq__text">
         Below is a list of frequently asked questions. If you can't find what
         you’re looking for then feel free to ask us directly via
-    </p>
-    <ol class="faq__list">
-        <li>What is your privacy and security policy?</li>
-        <li>How long is the development timeline?</li>
-        <li>What type of companies do you work with?</li>
-        <li>How many team members for a project?</li>
-        <li>What warranties are to ensure deliverables are met?</li>
-        <li>Do you outsource work?</li>
+            </p>
+            <a href="" class="faq__link">email<span class="faq__sp">.</span></a>
+        </div>
+        <ol class="faq__list">
+        <li class="faq__item">1. What is your privacy and security policy?
+            <svg class="faq__icon" width="28" height="28">
+                <use href="images/symbol-defs.svg#icon-faq-icon"></use>
+            </svg>
+        </li>
+        <li class="faq__item">2. How long is the development timeline?
+            <svg class="faq__icon" width="28" height="28">
+                <use href="images/symbol-defs.svg#icon-faq-icon"></use>
+            </svg>
+        </li>
+        <li class="faq__item">3. What type of companies do you work with?
+            <svg class="faq__icon" width="28" height="28">
+                <use href="images/symbol-defs.svg#icon-faq-icon"></use>
+            </svg>
+        </li>
+        <li class="faq__item">4. How many team members for a project?
+            <svg class="faq__icon" width="28" height="28">
+                <use href="images/symbol-defs.svg#icon-faq-icon"></use>
+            </svg>
+        </li>
+        <li class="faq__item">5. What warranties are to ensure deliverables are met?
+            <svg class="faq__icon" width="28" height="28">
+                <use href="images/symbol-defs.svg#icon-faq-icon"></use>
+            </svg>
+        </li>
+        <li class="faq__item">6. Do you outsource work?
+            <svg class="faq__icon" width="28" height="28">
+                <use href="images/symbol-defs.svg#icon-faq-icon"></use>
+            </svg>
+        </li>
     </ol>
+    </div>
 </section>
