Resources is completed

--- a/src/partials/resources.html
+++ b/src/partials/resources.html
@@ -1,42 +1,52 @@
-<section class="conteiner resources">
-  <h2 class="resources__h2">Resources</h2>
-  <p class="resources__text">
-    Sharing the latest and greatest from industry trends, insights, inspiration and successful
-    Appello ventures.
-  </p>
-  <ul class="resources__item list">
-    <li class="resources__info">
-      <div>
-        <img src="images/pharaoh.jpg" alt="pharaoh" width="340" />
-        <h3>Meet our Chief Design Officer, Pharaoh Woghiren</h3>
-        <p>Meet our Chief Design Officer, Pharaoh Woghiren.</p>
-      </div>
-    </li>
-    <li class="resources__info">
-      <div>
+<section class="resources">
+  <div class="container">
+    <h2 class="resources__h2">Resources</h2>
+    <p class="resources__text">
+      Sharing the latest and greatest from industry trends, insights, inspiration and successful
+      Appello ventures.
+    </p>
+    <ul class="resources-item list">
+      <li class="resources-item__info">
+        <img class="resources-item__img" src="images/pharaoh.jpg" alt="pharaoh" width="340" />
+        <div class="resources-item__text">
+          <h3 class="resources-item__h3">Meet our Chief Design Officer, Pharaoh Woghiren</h3>
+          <p class="resources-item__p">Meet our Chief Design Officer, Pharaoh Woghiren.</p>
+        </div>
+      </li>
+      <li class="resources-item__info">
         <img
+          class="resources-item__img"
           src="images/refreshing-mobile-applications.jpg"
           alt="refreshing-mobile-applications"
           width="340"
         />
-        <h3>
-          Refreshing Mobile Applications: How to Know When a Mobile App Redesign is Necessary?
-        </h3>
-        <p>
-          When to consider a mobile app redesign and signs to look out for to make sure your app
-          captures user attention and loyalty.
-        </p>
-      </div>
-    </li>
-    <li class="resources__info">
-      <div>
-        <img src="images/your-guide-to-developing.jpg" alt="your-guide-to-developing" width="340" />
-        <h3>Your Guide to Developing the Best People Management Software Solution</h3>
-        <p>
-          Custom employee management software or people management software solutions will be
-          extremely beneficial to not only your HR department but the entire company.
-        </p>
-      </div>
-    </li>
-  </ul>
+        <div class="resources-item__text">
+          <h3 class="resources-item__h3">
+            Refreshing Mobile Applications: How to Know When a Mobile App Redesign is Necessary?
+          </h3>
+          <p class="resources-item__p">
+            When to consider a mobile app redesign and signs to look out for to make sure your app
+            captures user attention and loyalty.
+          </p>
+        </div>
+      </li>
+      <li class="resources-item__info">
+        <img
+          class="resources-item__img"
+          src="images/your-guide-to-developing.jpg"
+          alt="your-guide-to-developing"
+          width="340"
+        />
+        <div class="resources-item__text">
+          <h3 class="resources-item__h3">
+            Your Guide to Developing the Best People Management Software Solution
+          </h3>
+          <p class="resources-item__p">
+            Custom employee management software or people management software solutions will be
+            extremely beneficial to not only your HR department but the entire company.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
